--- a/index.html
+++ b/index.html
@@ -29,6 +29,49 @@
       </div>
       <button class="button add-button" id="add-button"></button>
     </section>
+    <section class="photos">
+      <article class="photo-card">
+        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <div class="photo-card__info">
+          <p class="photo-card__name">Карачаевск</p>
+          <div class="photo-card__like"></div>
+        </div>
+      </article>
+      <article class="photo-card">
+        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <div class="photo-card__info">
+          <p class="photo-card__name">Карачаевск</p>
+          <div class="photo-card__like"></div>
+        </div>
+      </article>
+      <article class="photo-card">
+        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <p class="photo-card__name">Карачаевск</p>
+        <div class="photo-card__like"></div>
+      </article>
+      <article class="photo-card">
+        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <div class="photo-card__info">
+          <p class="photo-card__name">Карачаевск</p>
+          <div class="photo-card__like"></div>
+        </div>
+      </article>
+      <article class="photo-card">
+        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <div class="photo-card__info">
+          <p class="photo-card__name">Карачаевск</p>
+          <div class="photo-card__like"></div>
+        </div>
+      </article>
+      <article class="photo-card">
+        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <p class="photo-card__name">Карачаевск</p>
+        <div class="photo-card__like"></div>
+      </article>
+    </section>
+    <footer class="footer">
+      <p class="copyright">© 2020 Mesto Russia</p>
+    </footer>
   </div>
 </body>
 
