--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <div class="page__content">
     <header class="header">
-      <div class="logo"></div>
+      <div class="logo logo_place_header"></div>
       <div class="header__line"></div>
     </header>
     <section class="profile">
