Наведение мыши на элементы

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
         <div class="photo-card__info">
           <p class="photo-card__name">Карачаевск</p>
-          <div class="photo-card__like"></div>
+          <div class="photo-card__like photo-card__like_active"></div>
         </div>
       </article>
       <article class="photo-card">
