--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="page">
-  <div class="page__content">
+  <main class="page__content">
     <header class="header">
       <div class="logo logo_place_header"></div>
       <div class="header__line"></div>
@@ -22,19 +22,19 @@
         <div class="profile__info">
           <div class="profile__main">
             <h2 class="profile__name">Жак-Ив Кусто</h2>
-            <button class="button edit-button" id="edit-button"></button>
+            <button type="button" class="button edit-button" id="edit-button"></button>
           </div>
           <p class="profile__description">Исследователь океана</p>
         </div>
       </div>
-      <button class="button add-button" id="add-button"></button>
+      <button type="button" class="button add-button" id="add-button"></button>
     </section>
     <section class="photos">
       <article class="photo-card">
         <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
         <div class="photo-card__info">
           <p class="photo-card__name">Карачаевск</p>
-          <div class="photo-card__like"></div>
+          <div class="button photo-card__like"></div>
         </div>
       </article>
       <article class="photo-card">
@@ -72,7 +72,18 @@
     <footer class="footer">
       <p class="copyright">© 2020 Mesto Russia</p>
     </footer>
-  </div>
+    <div class="popup">
+      <div class="popup__container">
+        <form class="edit-profile">
+          <button type="button" class="button edit-profile__close"></button>
+          <h3 class="edit-profile__title">Редактировать профиль</h3>
+          <input type="text" id="edit-profile__name" class="edit-profile__input" placeholder="Введите ваше имя">
+          <input type="text" id="edit-profile__description" class="edit-profile__input" placeholder="Несколько слов о себе">
+          <button type="submit" class="button edit-profile__save">Сохранить</button>
+        </form>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
