--- a/index.html
+++ b/index.html
@@ -21,56 +21,56 @@
         </div>
         <div class="profile__info">
           <div class="profile__main">
-            <h2 class="profile__name">Жак-Ив Кусто</h2>
+            <h2 class="profile__name">Беликова Наталья</h2>
             <button type="button" class="button edit-button" id="edit-button"></button>
           </div>
-          <p class="profile__description">Исследователь океана</p>
+          <p class="profile__description">Любитель нового</p>
         </div>
       </div>
       <button type="button" class="button add-button" id="add-button"></button>
     </section>
     <section class="photos">
       <article class="photo-card">
-        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <img src="./images/Sheregesh.jpg" alt="Горнолыжный склон." class="photo-card__img">
         <div class="photo-card__info">
-          <p class="photo-card__name">Карачаевск</p>
+          <p class="photo-card__name">Шерегеш</p>
           <div class="button photo-card__like"></div>
         </div>
       </article>
       <article class="photo-card">
-        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <img src="./images/Eysk.jpg" alt="Небо и море." class="photo-card__img">
         <div class="photo-card__info">
-          <p class="photo-card__name">Карачаевск</p>
+          <p class="photo-card__name">Ейск</p>
           <div class="photo-card__like photo-card__like_active"></div>
         </div>
       </article>
       <article class="photo-card">
-        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
-        <p class="photo-card__name">Карачаевск</p>
+        <img src="./images/Nikola-lenivets.jpg" alt="Костер." class="photo-card__img">
+        <p class="photo-card__name">Никола-Ленивец</p>
         <div class="photo-card__like"></div>
       </article>
       <article class="photo-card">
-        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <img src="./images/Ergaki.jpg" alt="Лес и горы." class="photo-card__img">
         <div class="photo-card__info">
-          <p class="photo-card__name">Карачаевск</p>
+          <p class="photo-card__name">Ергаки</p>
           <div class="photo-card__like"></div>
         </div>
       </article>
       <article class="photo-card">
-        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
+        <img src="./images/Pushino.jpg" alt="Мозаика на стене дома." class="photo-card__img">
         <div class="photo-card__info">
-          <p class="photo-card__name">Карачаевск</p>
+          <p class="photo-card__name">Пущино</p>
           <div class="photo-card__like"></div>
         </div>
       </article>
       <article class="photo-card">
-        <img src="./images/Karachaevsk.jpg" alt="Дом в горах." class="photo-card__img">
-        <p class="photo-card__name">Карачаевск</p>
+        <img src="./images/Tomsk.jpg" alt="Htrf." class="photo-card__img">
+        <p class="photo-card__name">Томск</p>
         <div class="photo-card__like"></div>
       </article>
     </section>
     <footer class="footer">
-      <p class="copyright">© 2020 Mesto Russia</p>
+      <p class="copyright">© 2022 Mesto Russia</p>
     </footer>
     <div class="popup">
       <div class="popup__container">
