Исправления по результатам ревью

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   <div class="popup popup-new-card">
     <div class="popup__container">
       <button type="button" class="button popup__close" id="new-card__close"></button>
-      <form name="new-card-form">
+      <form class="new-card-form" name="new-card-form">
         <h3 class="popup__title">Новое место</h3>
         <input type="text" id="new-card__name" name="new-card__name" class="popup__input"
           placeholder="Название">
         <input type="text" id="new-card__src" name="new-card__src" class="popup__input"
           placeholder="Ссылка на картинку">
-        <button type="button" class="button button_save" name="new-card__save" id="new-card__save">Сохранить</button>
+        <button type="submit" class="button button_save" name="new-card__save" id="new-card__save">Сохранить</button>
       </form>
     </div>
   </div>
