--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
   <div class="popup popup-form">
     <div class="popup__container">
       <button type="button" class="button popup__close" id="edit-profile__close"></button>
-      <form class="edit-profile" name="edit-profile-form">
+      <form class="form edit-profile" name="edit-profile-form">
         <h3 class="popup__title">Редактировать профиль</h3>
         <input type="text" id="edit-profile__name" name="edit-profile__name" class="popup__input"
-          placeholder="Введите ваше имя">
+          placeholder="Введите ваше имя" required minlength="2" maxlength="40">
+        <span class="form__input-error edit-profile__name-error"></span>
         <input type="text" id="edit-profile__description" name="edit-profile__description" class="popup__input"
-          placeholder="Несколько слов о себе">
+          placeholder="Несколько слов о себе" required minlength="2" maxlength="200">
+        <span class="form__input-error edit-profile__description-error"></span>
         <button type="submit" class="button button_save" name="edit-profile__save">Сохранить</button>
       </form>
     </div>
@@ -48,12 +50,14 @@
   <div class="popup popup-new-card">
     <div class="popup__container">
       <button type="button" class="button popup__close" id="new-card__close"></button>
-      <form class="new-card-form" name="new-card-form">
+      <form class="form new-card-form" name="new-card-form">
         <h3 class="popup__title">Новое место</h3>
         <input type="text" id="new-card__name" name="new-card__name" class="popup__input"
-          placeholder="Название">
-        <input type="text" id="new-card__src" name="new-card__src" class="popup__input"
-          placeholder="Ссылка на картинку">
+          placeholder="Название" required minlength="2" maxlength="30">
+        <span class="form__input-error new-card__name-error"></span>
+        <input type="url" id="new-card__src" name="new-card__src" class="popup__input"
+          placeholder="Ссылка на картинку" required>
+        <span class="form__input-error new-card__src-error"></span>
         <button type="submit" class="button button_save" name="new-card__save" id="new-card__save">Сохранить</button>
       </form>
     </div>
