Доработка попапов и запросов

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,7 @@
         <input type="text" id="edit-profile__description" name="edit-profile__description" class="popup__input"
           placeholder="Несколько слов о себе" required minlength="2" maxlength="200">
         <span class="form__input-error edit-profile__description-error"></span>
-        <button type="submit" class="button button_save" name="edit-profile__save"
-          id="edit-profile__save">Сохранить</button>
+        <button type="submit" class="button button_save" name="edit-profile__save" id="edit-profile__save">Сохранить</button>
       </form>
     </div>
   </div>
@@ -61,7 +60,7 @@
         <input type="url" id="new-card__src" name="new-card__src" class="popup__input" placeholder="Ссылка на картинку"
           required>
         <span class="form__input-error new-card__src-error"></span>
-        <button type="submit" class="button button_save" name="new-card__save" id="new-card__save">Сохранить</button>
+        <button type="submit" class="button button_save" name="new-card__save" id="new-card__save">Создать</button>
       </form>
     </div>
   </div>
